# Text-to-Timeline

./: Combining_Timeline_Generation_Methods.ipynb  Event_DAG_parsing_with_SpaCy.ipynb  README.md  Sample_Notebook.ipynb  fastcoref_coref_resolution.py  pipeline.py  pyproject.toml  rule_based_coref_resolution.py  test_0.rdf  triplet_extraction.py  utils.py
maps/: tags.json
maps/temporal_relations/: predicate_map.json
modules/: Aligner.py  EdgeFD.py  Event.py  GraphAlignmentRule  GraphAlignmentRule.py  NodeWSD  NodeWSD.py  POSCategories  SemanticGraphMerger.py  clause_simplification.py  clean_rdf_graph.py  fastcoref_coref_resolution.py  pipeline.py  tests.py  timeline_construction.py  triplet_extraction.py  utils.py
src/text_to_timeline/: __init__.py
src/text_to_timeline/kg_construction/: Aligner.py  GraphAlignmentRule.py  SemanticGraphMerger.py  __init__.py  clean_rdf_graph.py  triplet_extraction.py
src/text_to_timeline/maps/: __init__.py
src/text_to_timeline/maps/coref_disambiguation/: pronouns.json
src/text_to_timeline/maps/temporal_relations/: allen_intervals.json  predicate_map.json
src/text_to_timeline/text_rewriting/: __init__.py  clause_simplification.py
src/text_to_timeline/timeline_construction/: BoundaryNode.py  DSU.py  Event.py  __init__.py  timeline_construction.py
src/text_to_timeline/utils/: __init__.py  pipeline.py  utils.py
tests/: tests.py
